package interfaces;

public interface Pagamento {

    void realizarPagamento();

    void cancelarPagamento();
}
